--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-  <title>Taking</title>
+  <title>Take Thing</title>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
       });
 
       if (things.length == 0) {
-        resultField.value = "No Result";
+        resultField.value = "Nothing to take from";
         return true;
       }
       resultField.value = things[Math.floor(Math.random() * things.length)];
