--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
       <textarea class="form-control h-100" style="resize:none;" placeholder="Enter things to pick from here." id="textarea"></textarea>
       <br>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-        <label class="form-check-label" for="inlineCheckbox1">Split Whitespace</label>
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1" checked>
+        <label class="form-check-label" for="inlineCheckbox1">Split Lines</label>
       </div>
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Split Commas</label>
+        <label class="form-check-label" for="inlineCheckbox2">Split Inline</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+        <label class="form-check-label" for="inlineCheckbox3">Split Commas</label>
       </div>
       
       <div class="input-group">
