--- a/index.html
+++ b/index.html
@@ -1,80 +1,151 @@
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="en">
 
 <head>
-  <!-- Required meta tags for Bootstrap -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="manifest" href="/manifest.webmanifest">
   <style>
-    html, body, .container {
+    html, body {
       height: 100%;
-      margin-top: 1em;
+      width: 100%;
+      margin: 0;
+      position: absolute;
       background-color: rgb(29, 29, 29);
     }
-    #textarea {
+    div.container-div {
+      display: grid;
+      grid-template-rows: 1fr auto;
+      grid-template-columns: 1fr 1fr;
+      box-sizing: border-box;
+      width: 70%;
+      margin: 0px auto;
       height: 100%;
+      padding-top: 3em;
+      padding-bottom: 3em;
+    }
+    #things-to-take-from {
+      display: block;
+      height: 100%;
+      width: 100%;
+      padding-left: calc(3px + 1em);
+      text-align: start;
+      text-indent: -1em;
+      margin-top: 0;
+      overflow: auto;
       resize: none;
+      background-color: rgb(49, 49, 49);
+      color: rgb(224, 224, 224);
+      outline: none;
+      box-sizing: border-box;
+      border: 1px solid #3d3d3d;
+      white-space: pre-wrap;
+      overflow-wrap: break-word;
+      font-family: monospace;
+      grid-area: 1 / 1 / 1 / 3;
+    }
+    #things-to-take-from > div {
+      margin-bottom: 4px;
+    }
+    .taken {
+      font-weight: bold;
+      color: rgb(255, 255, 255);
+      background-color: rgb(0,0,0);
+      box-shadow:
+       calc(-1em - 4px) 0px rgb(0,0,0),
+       4px 0px rgb(0,0,0);
+    }
+    #things-to-take-from:focus {
       background-color: rgb(49, 49, 49);
       color: rgb(209, 209, 209);
       outline: none;
     }
-    #textarea:focus {
-      background-color: rgb(49, 49, 49);
+    div.text-div {
       color: rgb(209, 209, 209);
-      outline: none;
+      display: block;
+      border: 1px solid #3d3d3d;
+      padding: 0.5em 0px;
+      box-sizing: border-box;
+      text-align: center;
+    }
+    div.controls-div {
+      display: grid;
     }
     label.form-check-label {
       color: rgb(209, 209, 209);
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      -o-user-select: none;
+      user-select: none;
+      cursor: default;
+      display: block;
+      border: 1px solid #3d3d3d;
+      padding: 0.5em 0px;
+      box-sizing: border-box;
+      text-align: center;
     }
-    #resultField {
+    div.button-div {
+      display: block;
+      box-sizing: border-box;
+    }
+    button {
+      width: 100%;
+      height: 100%;
+      padding: 0.5em 1em;
       background-color: rgb(49, 49, 49);
+      border: 1px solid #616161;
       color: rgb(209, 209, 209);
+    }
+    button:hover {
+      background-color: rgb(66, 66, 66);
+    }
+    @media screen and (max-height: 700) {
+      div.container-div {
+        padding-top: 0.2em;
+        padding-bottom: 0.2em;
+      }
+    }
+    @media screen and (max-width: 560) {
+      div.container-div {
+        padding: 0.2em;
+        width: 100%;
+      }
     }
   </style>
   <title>Take Thing</title>
 </head>
 
-<body class="d-flex flex-column h-75">
-    <br>
-    <div class="container h-100">
-      <noscript>This page doesn't work without javascript.</noscript>
-      <textarea class="form-control h-100" placeholder="Enter things to pick from here." id="textarea"></textarea>
-      <br>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1" checked>
-        <label class="form-check-label" for="inlineCheckbox1">Split Lines</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Split Inline</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-        <label class="form-check-label" for="inlineCheckbox3">Split Commas</label>
-      </div>
-      
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="" disabled id="resultField">
-        <button type="button" class="btn btn-primary" id="takeButton" style="width: 70px;">Take</button>
-      </div>
+<body>
+  <noscript>This page doesn't work without javascript enabled.</noscript>
+  <div class="container-div">
+    <div contenteditable="true" id="things-to-take-from"></div>
+    <div class="text-div">
+      Scroll for Options
     </div>
+    <div class="button-div">
+      <button type="button" id="takeButton">Take</button>
+    </div>
+  </div>
 
-  <!-- Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-  <script src="index.js">
-  </script>
-  <script>
+  <div class="controls-div">
+    <label class="form-check-label" for="inlineCheckbox0"><input type="checkbox" id="inlineCheckbox0" value="option0"> Split Sections</label>
+    <label class="form-check-label" for="inlineCheckbox1"><input type="checkbox" id="inlineCheckbox1" value="option1" checked> Split Lines (default)</label>
+    <label class="form-check-label" for="inlineCheckbox2"><input type="checkbox" id="inlineCheckbox2" value="option2"> Split Inline</label>
+    <label class="form-check-label" for="inlineCheckbox3"><input type="checkbox" id="inlineCheckbox3" value="option3"> Split Commas</label>
+    <label class="form-check-label" for="inlineCheckbox4"><input type="checkbox" id="inlineCheckbox4" value="option4" checked> Ignore Empty Lines (default)</label>
+    <div class="text-div">Shortcut: Ctrl or Shift + Enter</div>
+  </div>
+
+  <script src="index.js"></script>
+  <script type="module">
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('/sw.js').then(function (registration) {
-          // Registration was successful
+        navigator.serviceWorker.register(new URL('/sw.js', import.meta.url)).then(function (registration) {
           console.log('ServiceWorker registration successful with scope: ', registration.scope);
         }, function (err) {
-          // registration failed
           console.log('ServiceWorker registration failed: ', err);
         });
       });
